[project]
name = "pangea-python-monorepo"
version = "0.0.0"
description = "Pangea Python monorepo"
authors = []
license = "MIT"
readme = "README.md"
requires-python = ">=3.10.0,<4.0.0"
dependencies = []

[project.urls]
repository = "https://github.com/pangeacyber/pangea-python"

[tool.uv.sources]
pangea-django = { workspace = true }
pangea-sdk = { workspace = true }

[tool.uv.workspace]
members = [
  "examples/asyncio/*",
  "examples/ai_guard",
  "examples/audit",
  "examples/authn",
  "examples/authz",
  "examples/embargo",
  "examples/file_scan",
  "examples/intel",
  "examples/prompt_guard",
  "examples/redact",
  "examples/sanitize",
  "examples/share",
  "examples/vault",
  "packages/pangea-django",
  "packages/pangea-sdk"
]

[dependency-groups]
dev = [
  "mypy==1.19.1",
  "pytest==8.4.2",
  "ruff==0.15.2"
]

[tool.mypy]
python_version = "3.9"
explicit_package_bases = true
implicit_reexport = false
no_namespace_packages = false
mypy_path = [
  "examples/ai_guard",
  "examples/audit",
  "examples/authn",
  "examples/authz",
  "examples/embargo",
  "examples/file_scan",
  "examples/intel",
  "examples/prompt_guard",
  "examples/redact",
  "examples/sanitize",
  "examples/share",
  "examples/vault",
]
plugins = ['pydantic.mypy']

[tool.uv]
package = false
