[project]
name = "audit-examples"
version = "0.0.0"
description = "A set of examples on how to use Pangea's Python SDK to communicate with Secure Audit Log."
authors = [
  {name = "H. Andres Tournour", email = "andres.tournour@pangea.cloud"}
]
readme = "README.md"
requires-python = ">=3.9.2,<4.0.0"
dependencies = [
  "pangea-sdk"
]
