[tool.poetry]
name = "authn-examples"
version = "3.0.0"
description = "This is a set of examples about how to use python SDK to communicate with AuthN service"
authors = ["H. Andres Tournour <andres.tournour@pangea.cloud>"]
readme = "README.md"
packages = [{include = "authn_examples"}]

[tool.poetry.dependencies]
python = "^3.9.20"
pangea-sdk = "^4.4.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.13.0"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
