[project]
name = "authn-examples"
version = "3.0.0"
description = "This is a set of examples about how to use python SDK to communicate with AuthN service"
authors = [
  {name = "H. Andres Tournour", email = "andres.tournour@pangea.cloud"}
]
readme = "README.md"
requires-python = ">=3.9.2,<4.0.0"
dependencies = [
  "pangea-sdk"
]

[tool.poetry.dependencies]
python = "^3.9.20"
pangea-sdk = "^6.1.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=2.1.2"]
build-backend = "poetry.core.masonry.api"
