[tool.poetry]
name = "authz-examples"
version = "0.0.0"
description = "AuthZ examples."
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.18"
pangea-sdk = { path = "../../packages/pangea-sdk", develop = true }

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.10.0"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core==1.9.0"]
build-backend = "poetry.core.masonry.api"
