[project]
name = "authz-examples"
version = "0.0.0"
description = "AuthZ examples."
authors = []
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pangea-sdk"
]

[tool.poetry.dependencies]
python = "^3.9.20"
pangea-sdk = { path = "../../packages/pangea-sdk", develop = true }

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=2.1.2"]
build-backend = "poetry.core.masonry.api"
