[project]
name = "filescan-examples"
version = "2.0.0"
description = "This is a set of examples about how to use python SDK to communicate with FileScan service"
authors = [
  {name = "H. Andres Tournour", email = "andres.tournour@pangea.cloud"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pangea-sdk==5.5.1"
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.0"
mypy = "^1.15.0"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=2.1.1"]
build-backend = "poetry.core.masonry.api"
