[tool.poetry]
name = "intel-examples"
version = "2.1.0"
description = "This is a set of examples about how to use python SDK to communicate with Intel service"
authors = ["H. Andres Tournour <andres.tournour@pangea.cloud>"]
readme = "README.md"
packages = [{include = "intel_examples"}]

[tool.poetry.dependencies]
python = "^3.9.20"
pangea-sdk = "^4.4.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.12.1"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
known_local_folder = ["intel_examples"]

[tool.mypy]
python_version = "3.9"
warn_unused_ignores = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
