[project]
name = "intel-examples"
version = "2.1.0"
description = "This is a set of examples about how to use python SDK to communicate with Intel service"
authors = [
  {name = "H. Andres Tournour", email = "andres.tournour@pangea.cloud"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pangea-sdk"
]

[tool.poetry]
packages = [{include = "intel_examples"}]

[tool.poetry.dependencies]
python = "^3.9.20"
pangea-sdk = { path = "../../packages/pangea-sdk", develop = true }

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.0"
mypy = "^1.15.0"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
known_local_folder = ["intel_examples"]

[tool.mypy]
python_version = "3.9"
warn_unused_ignores = true

[build-system]
requires = ["poetry-core>=2.1.1"]
build-backend = "poetry.core.masonry.api"
