[project]
name = "prompt-guard-examples"
requires-python = ">=3.9"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9.20"
pangea-sdk = { path = "../../packages/pangea-sdk", develop = true }

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
mypy = "^1.11.2"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
