[project]
name = "prompt-guard-examples"
requires-python = ">=3.9"
dependencies = [
  "pangea-sdk"
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9.20"
pangea-sdk = { path = "../../packages/pangea-sdk", develop = true }

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
