[tool.poetry]
name = "redact-examples"
version = "1.0.1"
description = "This is a set of examples about how to use python SDK to communicate with Vault service"
authors = ["H. Andres Tournour <andres.tournour@pangea.cloud>"]
readme = "README.md"
packages = [{include = "redact_examples"}]

[tool.poetry.dependencies]
python = "^3.7.2"
pangea-sdk = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
