[project]
name = "redact-examples"
version = "0.0.0"
description = "This is a set of examples about how to use Python SDK to communicate with Redact service"
authors = [
  {name = "H. Andres Tournour", email = "andres.tournour@pangea.cloud"}
]
readme = "README.md"
requires-python = ">=3.9.2,<4.0.0"
dependencies = [
  "pangea-sdk"
]
