[tool.poetry]
name = "share-examples"
version = "2.0.0"
description = "This is a set of examples about how to use python SDK to communicate with Share service"
authors = ["H. Andres Tournour <andres.tournour@pangea.cloud>"]
readme = "README.md"
packages = [{include = "share_examples"}]

[tool.poetry.dependencies]
python = "^3.9.20"
click = "^8.1.7"
pangea-sdk =  { path = "../../packages/pangea-sdk/", develop = true }

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
mypy = "^1.12.1"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
