[project]
name = "share-examples"
version = "0.0.0"
description = "This is a set of examples about how to use python SDK to communicate with Share service"
authors = [
  {name = "H. Andres Tournour", email = "andres.tournour@pangea.cloud"}
]
readme = "README.md"
requires-python = ">=3.10.0,<4.0.0"
dependencies = [
  "click==8.3.0",
  "pangea-sdk"
]
