[tool.poetry]
name = "store-examples"
version = "2.0.0"
description = "This is a set of examples about how to use python SDK to communicate with Store service"
authors = ["H. Andres Tournour <andres.tournour@pangea.cloud>"]
readme = "README.md"
packages = [{include = "store_examples"}]

[tool.poetry.dependencies]
python = "^3.7.2"
pangea-sdk =  { path = "../../packages/pangea-sdk/", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
