[project]
name = "authz-examples"
version = "0.0.0"
description = "AuthZ examples."
authors = []
readme = "README.md"
requires-python = ">=3.9.2,<4.0.0"
dependencies = [
  "pangea-sdk"
]

[tool.poetry.dependencies]
python = "^3.9.20"
pangea-sdk = { path = "../../../packages/pangea-sdk", develop = true }

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core>=2.1.3"]
build-backend = "poetry.core.masonry.api"
