[tool.poetry]
name = "filescan-examples"
version = "2.0.0"
description = "This is a set of examples about how to use python SDK to communicate with FileScan service"
authors = ["H. Andres Tournour <andres.tournour@pangea.cloud>"]
readme = "README.md"
packages = [{include = "file_scan_examples"}]

[tool.poetry.dependencies]
python = "^3.7.2"
pangea-sdk = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
