[project]
name = "filescan-examples"
version = "2.0.0"
description = "This is a set of examples about how to use python SDK to communicate with FileScan service"
authors = [
  {name = "H. Andres Tournour", email = "andres.tournour@pangea.cloud"}
]
readme = "README.md"
requires-python = ">=3.9.2,<4.0.0"
dependencies = [
  "pangea-sdk==6.2.0"
]

[tool.poetry]
packages = [{include = "file_scan_examples"}]

[tool.poetry.dependencies]
python = "^3.9.20"

[tool.poetry.group.dev.dependencies]
mypy = "1.17.0"

[build-system]
requires = ["poetry-core>=2.1.3"]
build-backend = "poetry.core.masonry.api"
