[project]
name = "asyncio-filescan-examples"
version = "2.0.0"
description = "This is a set of examples about how to use python SDK to communicate with FileScan service"
authors = [
  {name = "H. Andres Tournour", email = "andres.tournour@pangea.cloud"}
]
readme = "README.md"
requires-python = ">=3.9.2,<4.0.0"
dependencies = ["pangea-sdk"]
