[tool.poetry]
name = "intel-examples"
version = "2.1.0"
description = "This is a set of examples about how to use python SDK to communicate with Vault service"
authors = ["H. Andres Tournour <andres.tournour@pangea.cloud>"]
readme = "README.md"
packages = [{include = "intel_examples"}]

[tool.poetry.dependencies]
python = "^3.7.2"
pangea-sdk = "^2.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
