[tool.poetry]
name = "intel-examples"
version = "2.1.0"
description = "This is a set of examples about how to use python SDK to communicate with Intel service"
authors = ["H. Andres Tournour <andres.tournour@pangea.cloud>"]
readme = "README.md"
packages = [{include = "intel_examples"}]

[tool.poetry.dependencies]
python = "^3.9.20"
pangea-sdk = "^4.4.0"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
mypy = "^1.11.2"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
