[tool.poetry]
name = "redact-examples"
version = "2.0.0"
description = "This is a set of examples about how to use python SDK to communicate with Redact service"
authors = ["H. Andres Tournour <andres.tournour@pangea.cloud>"]
readme = "README.md"
packages = [{include = "redact_examples"}]

[tool.poetry.dependencies]
python = "^3.8.18"
pangea-sdk = "^4.2.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.11.0"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
