[project]
name = "redact-examples"
version = "2.0.0"
description = "This is a set of examples about how to use python SDK to communicate with Redact service"
authors = [
  {name = "H. Andres Tournour", email = "andres.tournour@pangea.cloud"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pangea-sdk"
]

[tool.poetry.dependencies]
python = "^3.9.20"
pangea-sdk = "^5.4.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.14.1"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=2.0.1"]
build-backend = "poetry.core.masonry.api"
